--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <version>2.0.38</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
