--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,14 @@
         </dependency>
 
         <!-- mybatis plus补充-->
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.1.214</version>
-            <scope>runtime</scope>
+            <version>2.2.220</version>
+            <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-extension</artifactId>
@@ -141,6 +143,7 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.2</version>
         </dependency>
+
 
     </dependencies>
 
