--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
             <version>2.15.2</version>
         </dependency>
 
+        <!--Redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
     </dependencies>
 
