--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,6 @@ server: # 端口设置
   port: 8081
 
 expirationTime: 10  # redis缓存过期时间(秒)
-imagePath: "D://JUNGLE//JavaEE//"
-
+imagePath: "D://JUNGLE//JavaEE//" # 存储图片路径
+tokenLength: 10 #token长度
 
