--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ server: # 端口设置
   port: 8081
 
 expirationTime: 10  # redis缓存过期时间(秒)
-imagePath: "D://JUNGLE//JavaEE//" # 存储图片路径
+imagePath: "C://Users//86187//Desktop//Studies//大三上//JavaEE//Image//" # 存储图片路径
+
 tokenLength: 10 #token长度
 logicIndexPath: "/image/index.html" #登录页面
+BaseUrl: http://localhost:8081
