--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ server: # 端口设置
 
 expirationTime: 10  # redis缓存过期时间(秒)
 imagePath: "/home/liyehui/Programing/BSDN/image/" # 存储图片路径
-
+videoPath: "D://JUNGLE//JavaEE//" # 存储视频路径
 tokenLength: 10 #token长度
 logicIndexPath: "/image/index.html" #登录页面
 BaseUrl: http://localhost:8081/
