--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource: #mysql 配置
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://{}?useSSL=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai #数据库URL
-    username: username #用户名
-    password: password #密码
+    url: jdbc:mysql://bj-cynosdbmysql-grp-p55yr6pq.sql.tencentcdb.com:29754/test?useSSL=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai #数据库URL
+    username: syc #用户名
+    password: syc123456! #密码
   data: # redis配置
     redis:
       database: 0
-      host: 127.0.0.1
+      host: 82.157.75.213
       lettuce:
         pool:
           max-active: -1 #最大连接数据库连接数,设 -1 为没有限制
@@ -15,14 +15,14 @@ spring:
           max-wait: -1ms #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制
           min-idle: 0    #最小等待连接中的数量,设 0 为没有限制
         shutdown-timeout: 100ms
-      password: ''
+      password: yy123456!
       port: 6379
   servlet:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
 server: # 端口设置
-  port: 8081
+  port: 8082
 
 # 日志持久化路径,只有部署的时候需要
 logging:
