--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource: #mysql 配置
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://bj-cynosdbmysql-grp-p55yr6pq.sql.tencentcdb.com:29754/test?useSSL=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai #数据库URL
-    username: syc #用户名
-    password: syc123456! #密码
+    url:  #数据库URL
+    username:  #用户名
+    password:  #密码
   data: # redis配置
     redis:
       database: 0
-      host: 82.157.75.213
+      host: 
       lettuce:
         pool:
           max-active: -1 #最大连接数据库连接数,设 -1 为没有限制
@@ -15,8 +15,8 @@ spring:
           max-wait: -1ms #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制
           min-idle: 0    #最小等待连接中的数量,设 0 为没有限制
         shutdown-timeout: 100ms
-      password: yy123456!
-      port: 6379
+      password: 
+      port: 
   servlet:
     multipart:
       max-file-size: 100MB
